# suitest-autoclicker

./: .gitignore  decorators.py  errors.py  main.py  parser.py  pyproject.toml  readme.md  sagemcom.json  sky.json  translator.py  webos.json
keyboards/: sagemcom.json  webos.json
